Fixed MegaMenu subitem overflow issues

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_megamenu.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_megamenu.scss
@@ -400,6 +400,8 @@ $mixed-megamenu-bg:             $megamenu-bg;
 }
 
 .megamenu-subitem-wrap {
+    overflow: hidden;
+    text-overflow: ellipsis;
     white-space: nowrap;
 }
 
